Add Movie Controller and search movies endpoint